[Finance] records{id} update add. Not replacing! add amount to amount in DB. amount = 450 if update, f.e = 50, amount = 500
